I wrote a lot of the encryption logic required, I still need to actually make the rest of the codebase other than SecretsStorage use it